--- a/confirmation.html
+++ b/confirmation.html
@@ -30,7 +30,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1> Merci pour votre achat ! <h1>
 
   <p> A très vite sur notre site !
-	 <a href="https://arthurseche.github.io/rentreeM2/hello.html"> homepage </a>
+	 <a href="https://psellier.github.io/rentreeM2/hello.html"> homepage </a>
   </p> 
                                    
   </div>
