--- a/hello.html
+++ b/hello.html
@@ -30,9 +30,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <p> Il te faudra tout d'abord installé Google Tag Manager ainsi que Google Analytics 4 sur ton site web puis te rendre sur le lien exercice 1 ci-dessous pour la suite de l'exercice:</p> 
     
-  <p><a href="https://arthurseche.github.io/rentreeM2/exercice1.html"> exercices 1 </a> <br>
-  <a href="https://arthurseche.github.io/rentreeM2/contact.html"> contact </a> <br>
-    <a href="https://arthurseche.github.io/rentreeM2/produit.html"> produit </a></p>
+  <p><a href="https://psellier.github.io/rentreeM2/exercice1.html"> exercices 1 </a> <br>
+  <a href="https://psellier.github.io/rentreeM2/contact.html"> contact </a> <br>
+    <a href="https://psellier.github.io/rentreeM2/produit.html"> produit </a></p>
   <p> Bon courage! </p>                                                       
   </div>
   <div class="footer">
