--- a/exercice1.html
+++ b/exercice1.html
@@ -30,6 +30,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
   <p><a href="https://psellier.github.io/rentreeM2/hello.html">homepage1</a> <br>
     <a href="https://psellier.github.io/rentreeM2/hello.html">homepage2 </a></p>
+ <a href="https://psellier.github.io/rentreeM22/hello.html" name="clicDatalayer" onclick="dataLayer.push({'event': 'clicexercice2'});">Homepagedatalayer	</a>
+
 
 <h1> Exercice 2 <h1>
 
