--- a/exercice1.html
+++ b/exercice1.html
@@ -29,8 +29,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p> Tracker les deux liens ci-dessous en utilisant deux méthodes différentes : </p> 
     
   <p><a href="https://psellier.github.io/rentreeM2/hello.html">homepage1</a> <br>
-    <a href="https://psellier.github.io/rentreeM2/hello.html">homepage2 </a></p>
- <a href="https://psellier.github.io/rentreeM22/hello.html" name="clicDatalayer" onclick="dataLayer.push({'event': 'clicexercice2'});">Homepagedatalayer	</a>
+    <a href="https://psellier.github.io/rentreeM2/hello.html">homepage2 </a><br>
+  <a href="https://psellier.github.io/rentreeM22/hello.html" name="clicDatalayer" onclick="dataLayer.push({'event': 'clicexercice2'});">Homepagedatalayer	</a>
+</p>
 
 
 <h1> Exercice 2 <h1>
