--- a/exercice1.html
+++ b/exercice1.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="fr">
 <head>
- <script>
+<script>
 window.dataLayer = window.dataLayer || [];
-
+ 
 dataLayer.push({
- 'category': 'Clic home'
-});
+ 'category': 'Exercice',
+}); </script>
  <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
