--- a/confirmation.html
+++ b/confirmation.html
@@ -7,6 +7,7 @@ window.dataLayer = window.dataLayer || [];
  
 dataLayer.push({
  'category': 'Confirmation',
+ 'ecommerce' : 'Commande confirmée'
 }); </script>
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
