--- a/confirmation.html
+++ b/confirmation.html
@@ -7,7 +7,14 @@ window.dataLayer = window.dataLayer || [];
  
 dataLayer.push({
  'category': 'Confirmation',
- 'ecommerce' : 'Commande confirmée'
+ 'transactionProducts': [{
+   'name': 'Maillot Domicile stade rennais',
+   'price': 90,  
+   'size' : 'M',
+	 'marque' : 'Puma'
+ }]
+});
+ 
 }); </script>
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
