--- a/confirmation.html
+++ b/confirmation.html
@@ -7,7 +7,7 @@ window.dataLayer = window.dataLayer || [];
  
 dataLayer.push({
  'category': 'Confirmation',
- 'transactionProducts': [{
+ 'ecommerce': [{
    'name': 'Maillot Domicile stade rennais',
    'price': 90,  
    'size' : 'M',
