--- a/confirmation.html
+++ b/confirmation.html
@@ -7,7 +7,11 @@ window.dataLayer = window.dataLayer || [];
  
 dataLayer.push({
  'category': 'Confirmation',
- 'ecommerce': [{
+ 'event': 'purchase',
+ 'transactionId': '1234',
+ 'transactionAffiliation': 'Acme Clothing',
+ 'transactionTotal': 90,
+ 'transactionProducts': [{
    'name': 'Maillot Domicile stade rennais',
    'price': 90,  
    'size' : 'M',
